# pecera

./: CMakeLists.txt  README
src/: EditorProvider.h  EditorTab.cpp  EditorTab.h  EditorTabs.cpp  EditorTabs.h  EmacsEditorProvider.cpp  EmacsEditorProvider.h  EnvironmentEditorProvider.cpp  EnvironmentEditorProvider.h  FilenameSearchProvider.cpp  FilenameSearchProvider.h  FullTextSearchProvider.h  Pecera.cpp  PeceraApplication.cpp  PeceraApplication.h  Project.cpp  Project.h  Result.h  ResultTest.cpp  SearchBar.cpp  SearchBar.h  SearchProvider.cpp  SearchProvider.h  SuggestionBox.cpp  SuggestionBox.h  TabbedProcess.cpp  TabbedProcess.h  TestEmbeddedEditor.cpp  TestSearch.cpp  TestUI.cpp  UnitTest.cpp  Window.cpp  Window.h
